# banca_360_metodologia_v4

./: .gitignore  GUIA_ARCHIVOS_PROYECTO_V4.md  README.md  analisis_contrato_externo.md  diccionario de parametros.txt  pyproject.toml  requirements.txt  settings_parameter_guidelines.ipynb
conf/: settings.yaml
docs/: index.html
notebooks/: master_banca_360_mlops_orquestador.ipynb
src/: __init__.py
src/banca_360_mlops/: __init__.py  cli.py  config.py  io.py  tracking.py
src/banca_360_mlops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/banca_360_mlops/core/: __init__.py  configuracion.py  datasets_sinteticos.py  exploracion.py  framework_bi_universal.py  limpieza.py  metodologia.py  plantilla_pipeline_ciencia_datos.py  segmentacion_nba.py  visualizacion.py
src/banca_360_mlops/pipeline/: __init__.py  nodes.py  orchestrator.py
src/banca_360_mlops/services/: __init__.py  bank360_case.py
src/banca_360_mlops/utils/: __init__.py  reproducibility.py
